fixtures/cs-hash-02/bad/named-import-hash-alias.ts
import { hash as bcryptHash } from "bcryptjs";

export function hashPassword(password: string) {
	return bcryptHash(password, 9);
}
